syntax = "proto3";

package hero;

service HeroService {
  rpc FindOne (HeroById) returns (Hero) {}
  rpc FindMany (stream HeroById) returns (stream Hero) {}
  rpc LeaderRequest(RaftRequest) returns (RaftResponse) {}
}

message HeroById {
  int32 id = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}

message RaftRequest {
  string message = 1;
}

message RaftResponse {
  string message = 1;
}